--- a/index.html
+++ b/index.html
@@ -3,32 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Maze solver</title>
+	<script src="LZWEncoder.js"></script>
+	<script src="NeuQuant.js"></script>
+	<script src="GIFEncoder.js"></script>
+	<script src="b64.js"></script>
 	<style>
 		body {
 			padding: 0;
 			margin: 0;
 		}
 
+		canvas {
+			display: block;
+			margin: 0 auto;
+		}
+
 		#maze {
 			margin: 50px auto 50px auto;
-		}
-
-		#maze div {
-			height: 10px;
-			width: 10px;
-			float: left;
-			display: inline;
-		}
-
-		#maze div.row {
-			float: none;
 		}
 	</style>
 </head>
 <body>
-	<div id="maze">
-
-	</div>
 </body>
 <script src="maze.js"></script>
 </html>
