color schemes and readme

--- a/maze.html
+++ b/maze.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Maze solver</title>
-	<script src="LZWEncoder.js"></script>
-	<script src="NeuQuant.js"></script>
-	<script src="GIFEncoder.js"></script>
-	<script src="b64.js"></script>
+	<script src="./lib/LZWEncoder.js"></script>
+	<script src="./lib/NeuQuant.js"></script>
+	<script src="./lib/GIFEncoder.js"></script>
+	<script src="./lib/b64.js"></script>
 	<style>
 		body {
 			padding: 0;
 			margin: 0;
 		}
 
-		canvas {
+		canvas, img {
 			display: block;
 			margin: 0 auto;
 		}
